syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

message LinkOwnerToCaseRequest {
	int64 CaseId = 1;

	// v33id noveho poradce vlastniciho Case
	int32 CaseOwnerUserId = 2;
}
